--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body{
   }
 }
 
-@media screen and not (orientation : portrait) {
+@media screen and (orientation : landscape) {
   
   body{
     background-image: url('https://photovideocreative.com/wordpress/wp-content/uploads/2017/11/Paysage-en-orientation-paysage.jpg');
